--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "morpher-ws3-client": "^1.0.8",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
