--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "ts-node --script-mode src/index.ts",
     "lexer": "ts-node --script-mode src/lexer.ts",
+    "vstavka": "ts-node --script-mode src/vstavka.ts",
     "test": "jest",
     "lint": "eslint src --ext .js --ext .jsx --ext .ts --ext .tsx",
     "lint:fix": "npm run lint -- --fix"
@@ -13,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "az": "^0.2.3",
     "morpher-ws3-client": "^1.0.8",
     "xlsx": "^0.18.5"
   },
